// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success edit email 1`] = `
"<div class=\\"\\">
  <div class=\\"logo\\">
    <a href=\\"\\"><span>[</span> {{ logoText }} <span>]</span></a>
  </div>
  <div class=\\"sideleft\\">
    <label class=\\"sidebar-label\\">Navigation</label>
    <div class=\\"menu\\">
      <a href=\\"\\">
        <div class=\\"menu-item\\">
          <i class=\\"icon-home-outline menu-item-icon\\"></i><span class=\\"menu-item-label\\">Dashboard</span>
        </div>
      </a>
    </div>
  </div>
  <div class=\\"header\\">
    <div class=\\"header-left\\">
      <div class=\\"navicon-left\\">
        <a>
          <i class=\\"icon-menu\\"></i>
        </a>
      </div>
    </div>
    <div class=\\"header-right\\">
      <div class=\\"dropdown\\">
        <a class=\\"link-profile\\"><span class=\\"logged-name\\">John Smith</span></a>
        <div class=\\"dropdown-menu \\">
          <ul class=\\"user-profile-nav\\">
            <li>
              <a href=\\"settings\\">
                <i class=\\"icon-cog\\"></i> Settings
              </a>
            </li>
            <li>
              <a href=\\"#\\">
                <i class=\\"icon-logout\\"></i> Sign Out
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"mainpanel\\">
    <h4 class=\\"page-header\\"> Profile settings
      <!--header-->
    </h4>
    <div class=\\"page-body\\">
      <div class=\\"panel settings\\">
        <h6>Name</h6>
        <p class=\\"mg-b-30\\">John Smith<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Email</h6>
        <p class=\\"mg-b-0\\">j.smith@example.com<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <form class=\\"form-layout\\">
            <!--header-->
            <!--if-->
            <!--ErrorsPanel-->
            <div class=\\"form-group\\">
              <label> Enter your email: </label>
              <input name=\\"email1\\" type=\\"text\\" autofocus=\\"\\">
            </div>
            <div class=\\"form-group\\">
              <label> Confirm your email: </label>
              <input name=\\"email2\\" type=\\"text\\">
            </div>
            <!--default-->
            <button type=\\"submit\\">Update
              <!--submit-->
            </button>
            <!--footer-->
          </form>
          <!--FormContainer-->
          <!--DynamicComponent-->
          <!--if-->
        </p>
        <!--Paragraph-->
      </div>
      <!--body-->
    </div>
    <!--if-->
    <!--Page-->
  </div>
</div>
<!--LayoutAuthenticated-->
<!--if-->
<!--Layout-->
<!--if-->"
`;

exports[`success edit email 2`] = `
"<div class=\\"\\">
  <div class=\\"logo\\">
    <a href=\\"\\"><span>[</span> {{ logoText }} <span>]</span></a>
  </div>
  <div class=\\"sideleft\\">
    <label class=\\"sidebar-label\\">Navigation</label>
    <div class=\\"menu\\">
      <a href=\\"\\">
        <div class=\\"menu-item\\">
          <i class=\\"icon-home-outline menu-item-icon\\"></i><span class=\\"menu-item-label\\">Dashboard</span>
        </div>
      </a>
    </div>
  </div>
  <div class=\\"header\\">
    <div class=\\"header-left\\">
      <div class=\\"navicon-left\\">
        <a>
          <i class=\\"icon-menu\\"></i>
        </a>
      </div>
    </div>
    <div class=\\"header-right\\">
      <div class=\\"dropdown\\">
        <a class=\\"link-profile\\"><span class=\\"logged-name\\">John Smith</span></a>
        <div class=\\"dropdown-menu \\">
          <ul class=\\"user-profile-nav\\">
            <li>
              <a href=\\"settings\\">
                <i class=\\"icon-cog\\"></i> Settings
              </a>
            </li>
            <li>
              <a href=\\"#\\">
                <i class=\\"icon-logout\\"></i> Sign Out
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"mainpanel\\">
    <h4 class=\\"page-header\\"> Profile settings
      <!--header-->
    </h4>
    <div class=\\"page-body\\">
      <div class=\\"panel settings\\">
        <h6>Name</h6>
        <p class=\\"mg-b-30\\">John Smith<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Email</h6>
        <p class=\\"mg-b-0\\">j2.smith@example.com<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
      </div>
      <!--body-->
    </div>
    <!--if-->
    <!--Page-->
  </div>
</div>
<!--LayoutAuthenticated-->
<!--if-->
<!--Layout-->
<!--if-->"
`;
